tests/NormalTests/paczka2/big_fuzzy/17901244.err
Error in line 5: ExljW8O S995 2,3
Error in line 15: NK4icy5Wn S164 61,0
Error in line 27: TSzb S248 58,4
Error in line 36: Q13y2tfO Su78 62,5
Error in line 35: Q13y2tfO S995 94,0
Error in line 39: P1s9T0 S248 85,6
Error in line 29: ExljW8O S248 60,4
Error in line 37: NK4icy5Wn S995 11,0
Error in line 43: TSzb S478 36,9
Error in line 33: BJ4k08gs S248 24,2
Error in line 55: S995 S164 45,9
Error in line 58: P1s9T0 S248 32,3
Error in line 60: S995 S248 21,1
Error in line 53: BJ4k08gs S478 61,9
Error in line 42: Q13y2tfO S478 302,5
Error in line 54: NK4icy5Wn S164 53,1
Error in line 72: TSzb S248 93,2
Error in line 71: BJ4k08gs S248 28,8
Error in line 79: Q13y2tfO S99* 163,*
Error in line 78: BJ4k08gs S164 3,7
Error in line 81: ExljW8O S248 91,1
Error in line 83: ExljW8O S478 61,2
Error in line 98: NK4icy5Wn S478 449,68
Error in line 100: S995 S478 98,3
Error in line 104: TSzb S248 85,2
Error in line 111: S995 S995 99,88
Error in line 110: BJ4k08gs S995 68,3
Error in line 95: NK4icy5Wn S478 94,5
Error in line 114: NK4icy5Wn S164 86,8
Error in line 112: S995 S995 426,1
Error in line 101: Q13y2tfO S995 226,6
Error in line 118: NK4icy5Wn S478 85,0
Error in line 127: BJ4k08gs S1z4 51,0
Error in line 125: NK4icy5Wn S248 76,7
Error in line 113: BJ4k08gs S164 34,2
Error in line 134: Q13y2tfO S99k 239,4
Error in line 133: Q13y2tfO S995 72,1
Error in line 136: P1s9T0 S164 33,8
Error in line 140: P1s9T0 S248 38,8
Error in line 135: NK4icy5Wn S478 364,6
Error in line 139: BJ4k08gs S248 22,7
Error in line 144: NK4icy5Wn S248 8,4
Error in line 157: Q13y2tfO S164 41,8
Error in line 165: P1s9T0 S164 1,5
Error in line 184: NK4icy5Wn S248 49,3
Error in line 193: NK4icy5Wn S995 74,3
Error in line 201: BJ4k08gs S99* 69,7
Error in line 203: P?s9T0 S478 264,?
Error in line 170: P1s9T0 S478 70,8
Error in line 222: BJ4k08gs S995 39,5
Error in line 219: Q13y2tfO S248 255,0
Error in line 245: BJ4k08gs S164 -1,5
Error in line 244: BJ4k08gs S164 52,9
Error in line 239: P1s9T0 S478 22,6
Error in line 246: BJ4k08gs S478 92,2
Error in line 232: ExljW8O S248 460,2
